--- a/app/src/main/res/layout/news_content_layout.xml
+++ b/app/src/main/res/layout/news_content_layout.xml
@@ -4,7 +4,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-    <krelve.app.kuaihu.view.RevealBackgroundView
+    <io.github.cellzer.yuezhihu.yuezhihu.ui.widget.RevealBackgroundView
         android:id="@+id/revealBackgroundView"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
