--- a/app/src/main/res/layout/news_layout.xml
+++ b/app/src/main/res/layout/news_layout.xml
@@ -4,12 +4,18 @@
               android:layout_height="match_parent"
               android:orientation="vertical" >
 
-    <ListView
-        android:id="@+id/lv_news"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:listSelector="#00000000"
-        android:divider="@android:color/transparent" >
-    </ListView>
+            <android.support.v4.widget.SwipeRefreshLayout
+                android:id="@+id/sr"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ListView
+                    android:id="@+id/lv_news"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:listSelector="#00000000"
+                    android:divider="@android:color/transparent" >
+                </ListView>
+            </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
