--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -9,7 +9,7 @@
                     android:title="首页"/>
                 <item
                     android:id="@+id/newsPage"
-                    android:icon="@mipmap/paper"
+                    android:icon="@mipmap/explore"
                     android:title="新奇日报"/>
                 <item
                     android:id="@+id/chosen"
