--- a/app/src/main/res/menu/menu_nav.xml
+++ b/app/src/main/res/menu/menu_nav.xml
@@ -3,40 +3,52 @@
 
     <group
         android:checkableBehavior="single">
-                <item
-                    android:id="@+id/mainPage"
-                    android:icon="@mipmap/paper"
-                    android:title="首页"/>
-                <item
-                    android:id="@+id/newsPage"
-                    android:icon="@mipmap/explore"
-                    android:title="新奇日报"/>
-                <item
-                    android:id="@+id/chosen"
-                    android:icon="@mipmap/chosen"
-                    android:title="精选"/>
-                <item
-                    android:id="@+id/ranking"
-                    android:icon="@mipmap/ranking"
-                    android:title="用户排名"/>
-                <item
-                    android:id="@+id/favorite"
-                    android:icon="@mipmap/favorite"
-                    android:title="收藏"/>
-    </group>
-        <item android:title="其他">
-            <menu>
-                <item
-                    android:id="@+id/setting"
-                    android:icon="@mipmap/setting"
-                    android:title="设置"/>
+        <item
+            android:id="@+id/mainPage"
+            android:icon="@mipmap/paper"
+            android:title="首页"/>
+        <item
+            android:id="@+id/newsPage"
+            android:icon="@mipmap/explore"
+            android:title="新奇日报"/>
+        <item
+            android:id="@+id/chosen"
+            android:icon="@mipmap/chosen"
+            android:title="精选"/>
+        <item
+            android:id="@+id/ranking"
+            android:icon="@mipmap/ranking"
+            android:title="用户排名"/>
+        <item
+            android:id="@+id/setting"
+            android:icon="@mipmap/setting"
+            android:title="设置"/>
 
-                <item
-                    android:id="@+id/about"
-                    android:icon="@mipmap/about"
-                    android:title="关于"/>
-            </menu>
-    </item>
+        <item
+            android:id="@+id/about"
+            android:icon="@mipmap/about"
+            android:title="关于"/>
+        <!--<item-->
+        <!--android:id="@+id/favorite"-->
+        <!--android:icon="@mipmap/favorite"-->
+        <!--android:title="收藏"/>-->
+
+    </group>
+    <!--<item-->
+        <!--android:checkableBehavior="single"-->
+        <!--android:title="其他">-->
+        <!--<menu>-->
+            <!--<item-->
+                <!--android:id="@+id/setting"-->
+                <!--android:icon="@mipmap/setting"-->
+                <!--android:title="设置"/>-->
+
+            <!--<item-->
+                <!--android:id="@+id/about"-->
+                <!--android:icon="@mipmap/about"-->
+                <!--android:title="关于"/>-->
+        <!--</menu>-->
+    <!--</item>-->
 
 
 </menu>
