--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,7 +8,7 @@
         <!--<item name="android:fitsSystemWindows">true</item>-->
         <item name="colorPrimary">@android:color/holo_blue_dark</item>
         <item name="colorPrimaryDark">@android:color/holo_blue_dark</item>
-        <item name="colorAccent">@android:color/holo_green_light</item>
+        <item name="colorAccent">@android:color/holo_blue_dark</item>
         <!--正常状态下字体颜色和icon颜色-->
         <item name="android:textColorPrimary">@android:color/white</item>
 
